# mark

./: .gitignore  .npmrc  LICENSE  MarkdownSyncContext.tsx  README.md  electron-builder.yml  index.html  index.ts  metadata.json  package-lock.json  package.json  pnpm-lock.yaml  server.ts  tsconfig.electron.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
data/: user-data.json
dist-electron/: index.cjs  index.js  index.js.map
docs/: ARCHITECTURE.md  BUILD.md  DEVELOPMENT.md  EXTENDING.md  USAGE.md
electron/: main.ts
server/: README.md  go.mod
server/data/: userdata.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/desktop/: notemark.desktop
src-tauri/src/: lib.rs  tray.rs  window_manager.rs
src-tauri/src/commands/: desktop.rs  editor_config.rs  file_system.rs  files.rs  mod.rs  search.rs  uploads.rs  user.rs  users.rs
src-tauri/src/models/: types.rs
src-tauri/src/repository/: storage.rs
src/api/: client.ts  index.ts  types.ts
src/components/: ContextMenuSurface.tsx  ErrorToast.tsx  Footer.tsx  Header.tsx  Loading.tsx  WindowControls.tsx
src/constants/: index.ts  theme.ts
src/contexts/: EditorConfigContext.tsx  EditorStateContext.tsx  ErrorContext.tsx  FileOperationContext.tsx  FileSystemContext.tsx  KeyboardShortcutsContext.tsx  MarkdownSyncContext.tsx  StorageContext.tsx  UserDataContext.tsx  errorBus.ts
src/hooks/: useFileSystem.ts  useKeyboardShortcuts.ts  useModalRoute.ts
src/i18n/: index.ts
src/router/: IndexRouter.tsx
src/services/: user.ts  (+1 more)
(+122 files in other folders)
